fixing paragraph spacing on the holding site

--- a/css/styles.css
+++ b/css/styles.css
@@ -310,6 +310,7 @@ form {
 .maincontent h5 {
     color:#222;
     line-height:152%;
+    font-size:14px;
 }
 
 .maincontent p {
